--- a/public/xiehui/index.html
+++ b/public/xiehui/index.html
@@ -31,18 +31,18 @@
 	</div>
 	<div id="PageBody">
 		<div class="section-a clearfix">
-			<div class="section-l box">
-				<div class="section-at">协会简介</div>
-				<div class="section-a-con">
+			<div class="section-l">
+				<div class="section-at-a">协会简介</div>
+				<div class="section-a-con box">
 					<div class="section-al-con">
 						<p>&nbsp;&nbsp;&nbsp;&nbsp;宁夏地质灾害防治协会的成立将为进一步充分发挥政府与会员之间的桥梁与纽带作用，为地质环境管理服务，促进国土资源可持续发展；规范地质灾害防治市场和工作程序，促进地质灾害防治工作水平和质量的提高；引导地质灾害防治从业机构和工作人员按照法律法规、标准规范，健康有序地开展地质灾害防治工作提供了一个新平台。</p>
 						<p>&nbsp;&nbsp;&nbsp;&nbsp;国土资源厅总工程师包敏代表宁夏国土资源厅对大会的成功召开和新当选的理事表示祝贺。他指出，政府部门职能的转变给社会团体创造了新的发展空间，地质灾害防治协会作为社会团体，要充分认识新形势，适应新变化</p>
 					</div>
 				</div>
 			</div>
-			<div class="section-r box">
-				<div class="section-at">协会动态</div>
-				<div class="section-a-con clearfix">
+			<div class="section-r">
+				<div class="section-at-b">协会动态</div>
+				<div class="section-a-con box clearfix">
 					<div class="flashpics">
 						<!--#begineditable contype="" name="变换图片文章" action="" layout="" clone="0" namechanged="0" order="0" ispublic="0" tagname="y2i01ly244" viewid="6568"-->
 						<script language='javascript' src='js/imagechangenews.js'></script>
