--- a/public/ting/index.html
+++ b/public/ting/index.html
@@ -30,7 +30,7 @@
 									<li>2013年</li>
 								</ul>
 							</span>
-							<input type="hidden" name="" value="" />
+							<input type="hidden" name="year" id="year" value="" />
 						</td>
 						<td>
 							<span class="search-select">
@@ -41,7 +41,7 @@
 									<li>第03期</li>
 								</ul>
 							</span>
-							<input type="hidden" name="" value="" />
+							<input type="hidden" name="qikan-no" id="qikan_no" value="" />
 						</td>
 						<td>
 							<input type="image" src="images/search_btn.png" class="img-btn" />
