--- a/public/ting/index.html
+++ b/public/ting/index.html
@@ -163,76 +163,94 @@
 			</div>
 			<div class="section-b">
 				<div class="section-bt"><a href="list-b.html">更多&gt;&gt;</a></div>
-				<div class="section-con box">
-					<ul class="mlist-b clearfix">
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-						<li>
-							<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
-							<p>2011年第08期</p>
-							<span><a href="#">在线阅读</a><a href="#">下载</a></span>
-						</li>
-					</ul>
+				<div class="section-con box clearfix">
+					<div class="mlist-block box">
+						<div class="mlist-block-t">单位名称</div>
+						<ul class="mlist-b clearfix">
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+						</ul>
+					</div>
+					<div class="mlist-block box">
+						<div class="mlist-block-t">单位名称</div>
+						<ul class="mlist-b clearfix">
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+						</ul>
+					</div>
+					<div class="mlist-block box">
+						<div class="mlist-block-t">单位名称</div>
+						<ul class="mlist-b clearfix">
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+						</ul>
+					</div>
+					<div class="mlist-block box">
+						<div class="mlist-block-t">单位名称</div>
+						<ul class="mlist-b clearfix">
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+							<li>
+								<div class="mb-cover"><a href="#"><img src="images/img_b.png" /></a></div>
+								<p>2011年第08期</p>
+								<span><a href="#">在线阅读</a><a href="#">下载</a></span>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="side">
 			<div class="section-s box">
 				<div class="section-s-t"><a href="#">更多&gt;&gt;</a>最新简讯排行</div>
-				<div class="sectoin-s-con">
+				<div class="section-s-con">
 					<ul>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
@@ -252,7 +270,7 @@
 			</div>
 			<div class="section-s box">
 				<div class="section-s-t"><a href="#">更多&gt;&gt;</a>最新简讯排行</div>
-				<div class="sectoin-s-con">
+				<div class="section-s-con">
 					<ul>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
