--- a/public/ting/list-a.html
+++ b/public/ting/list-a.html
@@ -133,7 +133,7 @@
 		<div class="side">
 			<div class="section-s box">
 				<div class="section-s-t"><a href="#">更多&gt;&gt;</a>最新简讯排行</div>
-				<div class="sectoin-s-con">
+				<div class="section-s-con">
 					<ul>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
@@ -153,7 +153,7 @@
 			</div>
 			<div class="section-s box">
 				<div class="section-s-t"><a href="#">更多&gt;&gt;</a>最新简讯排行</div>
-				<div class="sectoin-s-con">
+				<div class="section-s-con">
 					<ul>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
 						<li><a href="#">在线阅读</a>2011年第08期</li>
